@@ -45,7 +45,7 @@ tsdecrypt_SRC = data.c \
  tables.c \
  notify.c \
  tsdecrypt.c
-tsdecrypt_LIBS = -lcrypto -ldvbcsa -lpthread
+tsdecrypt_LIBS = -lcrypto -ldvbcsa -lpthread -lrt
 tsdecrypt_OBJS = $(FUNCS_LIB) $(TS_LIB) $(tsdecrypt_SRC:.c=.o)
 
 ifeq "$(shell uname -s)" "Linux"
