@@ -47,6 +47,8 @@ Output options:
  -o --output-intf <addr>    | Set multicast output interface. Default: 0.0.0.0
  -t --output-ttl <ttl>      | Set multicast ttl. Default: 1
  -g --output-tos <tos>      | Set TOS value of output packets. Default: none
+ -r --output-rtp            | Enable RTP output.
+ -k --output-rtp-ssrc <id>  | Set RTP SSRC. Default: 0
  -p --no-output-filter      | Disable output filtering. Default: enabled
  -y --output-nit-pass       | Pass through NIT.
  -w --output-eit-pass       | Pass through EIT (EPG).
